# spotify-tools

./: .gitignore  LICENSE  README.md  pyproject.toml
backupify/: backupify.py  cli.py
spotify-tools/: cli.py
spotify-tools/tools/: api.py  backup.py  copy.py
spotify_tools/: cli.py
spotify_tools/tools/: api.py  auth.py  backup.py  copy.py  identify.py  playlist.py
