[project]
name = "example"
version = "0.1.0"
description = "Tools for working with Spotify."
requires-python = ">=3.12"

dependencies = [
    "spotipy",
    "click",
    "python-dotenv",
    "pandas",
    "duckdb",
    "click-option-group",
    "pyarrow"
]

authors = [{ name = "Hugo Lundin Münch", email = "hugo@lundin.dev" }]

[project.scripts]
spotify-tools = "spotify_tools.cli:cli"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
include = '\.pyi?$'
exclude = '''
    /(
        \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    )/
    '''

[tool.isort]
profile="black"
sections="FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
length_sort=true
